--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Learn how to build a Logistic Regression model using TensorFlow.js and use to predict whether a patient has Diabetes",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html --open",
-    "test": "parcel test.html --open",
+    "start": "parcel index.html test.html",
     "build": "parcel build index.html"
   },
   "dependencies": {
     "@tensorflow/tfjs": "1.2.2",
     "@tensorflow/tfjs-vis": "1.1.0",
+    "datatables.net": "^1.10.20",
+    "jquery": "^3.4.1",
     "lodash": "4.17.11",
     "papaparse": "5.0.0",
     "plotly.js-dist": "^1.49.5"
